Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -67,6 +67,10 @@
   
 <img width="364" height="328" alt="image" src="https://github.com/user-attachments/assets/798d500a-9a0f-4ca8-b2e8-100fd585897c" />
 </br>
+
+- Data element 에 Search Help 연결
+<img width="587" height="432" alt="image" src="https://github.com/user-attachments/assets/2d1b75a3-476b-43a1-ac62-79d8f7ebe75f" />
+</br>
 </br>
 </br>
 </br>
@@ -128,7 +132,7 @@
 
 **2) DB Table에 Search Help 설정**
 - 원하는 필드 선택 후에 `Search Help` 버튼 클릭
-  
+
 <img width="592" height="201" alt="image" src="https://github.com/user-attachments/assets/ea73a953-873d-47b1-a836-b49a1ff16ee3" />
 </br>
 </br>
