Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -1,8 +1,8 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) `CALL SUBSCREEN`**
-- **2) Tabstrip (Tab Page) - 로컬 스크롤링**
+- **1) Search Help (F4 도움말) 설정하기**
+\
 
 </br>
 
