--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -36,13 +36,13 @@
 </br>
 </br>
 
-### Dialog Behavior
+### < Dialog Behavior >
 - 조회 전에 조건 입력(Restriction) 다이얼로그 표시 가능
 - 조건 입력 → 조회 결과 목록(히트 리스트) 표시
 </br>
 </br>
 
-### Search Help 연결
+### < Search Help 연결 >
 - **Dictionary(테이블/구조 필드)** 에 Search Help 연결 → 화면에서 자동 F4 제공 (권장)
 - 연결 가능 위치
   - Data Element / Table 필드 / Structure 필드 / Check Table
@@ -75,7 +75,7 @@
 </br>
 </br>
 
-### Input Help(F4) 적용 우선순위
+### < Input Help(F4) 적용 우선순위 >
 
 - **1) Program(화면)**
   - 화면 필드 직접 지정 (최우선)
