Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -116,6 +116,8 @@
 - `Parameter` 설정
 
   - Search Help에서 사용하는 필드 정의
+  - `IMP` : 화면 값 → Search Help로 전달 (조회 조건)
+  - `EXP` : Search Help 선택 값 → 화면으로 반환
   - `LPOS (List Position)` → 결과 리스트에 표시되는 순서
   - `SPOS (Selection Position)` → 조회조건(Restriction) 화면에 표시되는 순서
 </br>
