Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -149,4 +149,15 @@
 
 - 설정된 것을 확인
 <img width="593" height="191" alt="image" src="https://github.com/user-attachments/assets/af75078c-a3d8-41da-8317-fd39b3ee03a3" />
+</br>
+</br>
+</br>
+</br>
 
+**3) Search Help 에서 제안 기능 활성화 가능**
+
+<img width="679" height="384" alt="image" src="https://github.com/user-attachments/assets/7ba54cc9-e07c-4456-911b-36b09e5b181a" />
+</br>
+</br>
+
+<img width="533" height="303" alt="image" src="https://github.com/user-attachments/assets/0517673e-de64-4782-9622-9e030847bec3" />
