Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -155,7 +155,8 @@
 </br>
 
 **3) Search Help 에서 제안 기능 활성화 가능**
-
+- `Enhanced Options` : 입력하면서 자동으로 추천·검색을 도와주는 기능
+  
 <img width="597" height="338" alt="image" src="https://github.com/user-attachments/assets/5f5e7db7-3009-4ad0-af0b-9573ea0972cc" />
 
 </br>
