Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -15,6 +15,7 @@
 
 ### < 프로그램 타입 >
 - 둘 다 DB CRUD 작업 가능
+- Report / Module Pool 모두 INCLUDE 사용 가능
 </br>
 
 **1) Type 1 – Executable Program (Report Program)**
