Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -11,3 +11,10 @@
 ---
 
 </br>
+
+## < 모듈풀 프로그램 카피 방법 >
+- 이름 다르게 설정해야 함
+  
+<img width="370" height="149" alt="image" src="https://github.com/user-attachments/assets/85144e4f-e4ee-4e7c-9fe5-f828246899ca" />
+</br>
+</br>
