Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -12,6 +12,38 @@
 
 </br>
 
+## < ABAP 기본 문법 >
+
+### 1) WRITE AT - 위치지정 출력 문법
+- `WRITE AT` : 위치 지정 출력 모드 선언
+- `<pos>(<len>)` : 출력 시작 열과 길이 지정
+- `COLOR <color>` : 출력 색상 지정
+- `CURRENCY <f>` : 금액을 통화 단위에 맞게 포맷 출력
+```abap
+WRITE AT: / <pos>(<len>) <field>
+          COLOR <color>
+          CURRENCY <currency_field>.
+```
+```abap
+REPORT bc405_fold_write.
+
+CONSTANTS: gc_pos     TYPE i VALUE 12,
+           gc_len     TYPE i VALUE 10,
+           gc_len_pri TYPE i VALUE 15,
+           gc_len_cur TYPE i VALUE 5.
+
+WRITE AT: / sy-line,
+          gc_pos(gc_len) gs_sflight-fldate COLOR COL_KEY,
+          (gc_len_pri)   gs_sflight-price  CURRENCY gs_sflight-currency,
+          (gc_len_cur)   gs_sflight-currency.
+```
+</br>
+</br>
+
+---
+
+</br>
+
 ## < 모듈풀 프로그램 카피 방법 >
 - 이름 다르게 설정해야 함
   
