Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -40,6 +40,49 @@ WRITE AT: / sy-line,
 </br>
 </br>
 
+### 1-2) WRITE 추가 옵션
+- NO-GAP → 필드 뒤에 출력되는 공백 제거
+- NO-ZERO → 값이 0이면 공백 출력, 선행 0을 공백으로 치환
+- DD/MM/YY → 날짜 출력 형식(일/월/년) 지정
+- CURRENCY <currency_key> → 통화 키 기준으로 금액 포맷 적용 (TCURX 기준)
+- UNIT <unit_key> → 단위 키 기준으로 수량 포맷 적용 (T006 기준)
+- USING EDIT MASK <mask> → 지정한 편집 마스크 형식으로 출력
+- UNDER <g> → <g> 필드가 출력된 열 아래에서 출력 시작
+- LEFT-JUSTIFIED → 왼쪽 정렬 (C, N, D, T, X 기본)
+- CENTERED → 출력 길이 기준 가운데 정렬
+- RIGHT-JUSTIFIED → 오른쪽 정렬 (숫자 타입 기본)
+```abap
+WRITE [AT /<pos>(<len>)] <field>
+      [NO-GAP]
+      [NO-ZERO]
+      [DD/MM/YY]
+      [CURRENCY <currency_key>]
+      [UNIT <unit_key>]
+      [USING EDIT MASK <mask>]
+      [UNDER <g>]
+      [LEFT-JUSTIFIED | CENTERED | RIGHT-JUSTIFIED].
+```
+```abap
+DATA: gv_char TYPE c LENGTH 5 VALUE 'ABC',
+      gv_num  TYPE n LENGTH 4 VALUE '0004',
+      gv_date TYPE d VALUE sy-datum,
+      gv_amt  TYPE p DECIMALS 2 VALUE '1234.50',
+      gv_qty  TYPE p DECIMALS 1 VALUE '10.0'.
+
+WRITE AT: / 1(10)  gv_char NO-GAP,
+          12(10)   gv_num  NO-ZERO,
+          23(10)   gv_date DD/MM/YY,
+          35(15)   gv_amt  CURRENCY 'KRW',
+          52(10)   gv_qty  UNIT 'EA',
+          / 1(10)  gv_amt  USING EDIT MASK '__,___',
+          / 1(10)  gv_char UNDER gv_char,
+          / 1(10)  gv_char LEFT-JUSTIFIED,
+          / 1(10)  gv_char CENTERED,
+          / 1(10)  gv_char RIGHT-JUSTIFIED.
+```
+</br>
+</br>
+
 ---
 
 </br>
