Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -38,19 +38,18 @@ WRITE AT: / sy-line,
           (gc_len_cur)   gs_sflight-currency.
 ```
 </br>
-</br>
 
 ### 1-2) WRITE 추가 옵션
-- NO-GAP → 필드 뒤에 출력되는 공백 제거
-- NO-ZERO → 값이 0이면 공백 출력, 선행 0을 공백으로 치환
-- DD/MM/YY → 날짜 출력 형식(일/월/년) 지정
-- CURRENCY <currency_key> → 통화 키 기준으로 금액 포맷 적용 (TCURX 기준)
-- UNIT <unit_key> → 단위 키 기준으로 수량 포맷 적용 (T006 기준)
-- USING EDIT MASK <mask> → 지정한 편집 마스크 형식으로 출력
-- UNDER <g> → <g> 필드가 출력된 열 아래에서 출력 시작
-- LEFT-JUSTIFIED → 왼쪽 정렬 (C, N, D, T, X 기본)
-- CENTERED → 출력 길이 기준 가운데 정렬
-- RIGHT-JUSTIFIED → 오른쪽 정렬 (숫자 타입 기본)
+- `NO-GAP` → 필드 뒤에 출력되는 공백 제거
+- `NO-ZERO` → 값이 0이면 공백 출력, 선행 0을 공백으로 치환
+- `DD/MM/YY` → 날짜 출력 형식(일/월/년) 지정
+- `CURRENCY <currency_key>` → 통화 키 기준으로 금액 포맷 적용 (TCURX 기준)
+- `UNIT <unit_key>` → 단위 키 기준으로 수량 포맷 적용 (T006 기준)
+- `USING EDIT MASK <mask>` → 지정한 편집 마스크 형식으로 출력
+- `UNDER <g>` → <g> 필드가 출력된 열 아래에서 출력 시작
+- `LEFT-JUSTIFIED` → 왼쪽 정렬 (C, N, D, T, X 기본)
+- `CENTERED` → 출력 길이 기준 가운데 정렬
+- `RIGHT-JUSTIFIED` → 오른쪽 정렬 (숫자 타입 기본)
 ```abap
 WRITE [AT /<pos>(<len>)] <field>
       [NO-GAP]
