Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -14,7 +14,7 @@
 
 ## < ABAP 기본 문법 >
 
-### 1) WRITE AT - 위치지정 출력 문법
+### 1) WRITE 추가 옵션
 - `WRITE AT` : 위치 지정 출력 모드 선언
 - `<pos>(<len>)` : 출력 시작 열과 길이 지정
 - `COLOR <color>` : 출력 색상 지정
@@ -39,7 +39,6 @@ WRITE AT: / sy-line,
 ```
 </br>
 
-### 1-2) WRITE 추가 옵션
 - `NO-GAP` → 필드 뒤에 출력되는 공백 제거
 - `NO-ZERO` → 값이 0이면 공백 출력, 선행 0을 공백으로 치환
 - `DD/MM/YY` → 날짜 출력 형식(일/월/년) 지정
