Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -82,6 +82,32 @@ WRITE AT: / 1(10)  gv_char NO-GAP,
 </br>
 </br>
 
+### 2) Selection Screen
+- 프로그램 실행 시 표준 선택화면(Screen 1000) 자동 생성
+```abap
+PARAMETERS: ...
+SELECT-OPTIONS: ...
+```
+```abap
+PARAMETERS: p_id TYPE string.
+SELECT-OPTIONS: s_date FOR sy-datum.
+```
+- 직접 번호를 지정한 사용자 정의 Selection Screen 생성
+```abap
+SELECTION-SCREEN BEGIN OF SCREEN <no>.
+  PARAMETERS ...
+  SELECT-OPTIONS ...
+SELECTION-SCREEN END OF SCREEN <no>.
+```
+```abap
+SELECTION-SCREEN BEGIN OF SCREEN 1100.
+PARAMETERS: p_name TYPE string.
+SELECT-OPTIONS: s_date FOR sy-datum.
+SELECTION-SCREEN END OF SCREEN 1100.
+```
+</br>
+</br>
+
 ---
 
 </br>
