Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -108,6 +108,48 @@ SELECTION-SCREEN END OF SCREEN 1100.
 </br>
 </br>
 
+### 3) PARAMETERS
+- `VALUE CHECK` : 도메인/서치헬프 기준으로 입력값 유효성 자동 검사
+- `MEMORY ID <pid>` : 이전에 입력했던 값을 SAP 메모리에서 자동 불러옴
+- `MODIF ID <mod>` : 같은 MODIF ID끼리 묶어 화면 활성/비활성 등 동적 제어에 사용
+```abap
+PARAMETERS <f>
+  [TYPE <type> | LIKE <f1>]
+  [DECIMALS <n>]
+  [OBLIGATORY]
+  [DEFAULT <value>]
+  [LOWER CASE]
+  [VALUE CHECK]
+  [AS CHECKBOX]
+  [RADIOBUTTON GROUP <grp>]
+  [MEMORY ID <pid>]
+  [MODIF ID <mod>].
+```
+```abap
+REPORT bc405_screen_d2.
+
+PARAMETERS: pa_carr TYPE sflight-carrid MEMORY ID CAR OBLIGATORY,
+            pa_name AS CHECKBOX DEFAULT 'X',
+            pa_curr AS CHECKBOX DEFAULT 'X',
+            pa_lim1 RADIOBUTTON GROUP lim DEFAULT 'X',
+            pa_lim2 RADIOBUTTON GROUP lim,
+            pa_lim3 RADIOBUTTON GROUP lim,
+            pa_price TYPE p DECIMALS 2 DEFAULT '500',
+            pa_text TYPE string LOWER CASE.
+
+CONSTANTS gc_mark VALUE 'X'.
+
+IF pa_name EQ gc_mark.
+  " Output name
+ENDIF.
+
+CASE gc_mark.
+  WHEN pa_lim1.
+  WHEN pa_lim2.
+  WHEN pa_lim3.
+ENDCASE.
+```
+
 ---
 
 </br>
