--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -109,6 +109,8 @@ SELECTION-SCREEN END OF SCREEN 1100.
 </br>
 
 ### 3) PARAMETERS
+- `OBLIGATORY` : 필수 입력값
+- `LOWER CASE` : 소문자 입력 허용
 - `VALUE CHECK` : 도메인/서치헬프 기준으로 입력값 유효성 자동 검사
 - `MEMORY ID <pid>` : 이전에 입력했던 값을 SAP 메모리에서 자동 불러옴
 - `MODIF ID <mod>` : 같은 MODIF ID끼리 묶어 화면 활성/비활성 등 동적 제어에 사용
