Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -92,6 +92,15 @@ SELECT-OPTIONS: ...
 PARAMETERS: p_id TYPE string.
 SELECT-OPTIONS: s_date FOR sy-datum.
 ```
+- `SELECT-OPTIONS` → 범위 입력용 선택 조건
+```abap
+SELECT-OPTIONS <seltab> FOR <field>.
+```
+```abap
+DATA gs_flight TYPE sflight.
+SELECT-OPTIONS: so_car FOR gs_flight-carrid DEFAULT 'AA',
+                so_fld FOR gs_flight-fldate.
+```
 - 직접 번호를 지정한 사용자 정의 Selection Screen 생성
 ```abap
 SELECTION-SCREEN BEGIN OF SCREEN <no>.
