Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -93,6 +93,7 @@ PARAMETERS: p_id TYPE string.
 SELECT-OPTIONS: s_date FOR sy-datum.
 ```
 - `SELECT-OPTIONS` → 범위 입력용 선택 조건
+- `SELECT-OPTIONS` 는 헤더라인이 있는 내부 테이블이므로 `INTO` 생략 가능
 ```abap
 SELECT-OPTIONS <seltab> FOR <field>.
 ```
