--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -94,19 +94,8 @@ SELECT-OPTIONS: s_date FOR sy-datum.
 ```
 - `SELECT-OPTIONS` → 범위 입력용 선택 조건
 - `SELECT-OPTIONS` 는 헤더라인이 있는 내부 테이블이므로 `INTO` 생략 가능
-```abap
-SELECT-OPTIONS <seltab> FOR <field>.
-```
-```abap
-DATA gs_flight TYPE sflight.
-SELECT-OPTIONS: so_car FOR gs_flight-carrid DEFAULT 'AA',
-                so_fld FOR gs_flight-fldate.
-```
-</br>
-
-- SELECT-OPTIONS: 내부적으로 `SIGN / OPTION / LOW / HIGH` 구조
+- 내부적으로 `SIGN / OPTION / LOW / HIGH` 구조
 - `SELECT-OPTIONS`는 데이터베이스 테이블 필드를 직접 참조할 수 없고, 해당 필드가 포함된 이미 선언된 변수(Work Area 또는 Structure)의 필드를 통해 참조해야 함
-- Select-options는 Header Line 있는 itab 이므로 APPEND 시 TO 절 생략 가능
 
 | ABAP OPTION 값 | 의미 (Meaning) | LOW/HIGH 사용 | SQL 연산자 개념 |
 | :---: | :--- | :---: | :---: |
@@ -120,63 +109,16 @@ SELECT-OPTIONS: so_car FOR gs_flight-carrid DEFAULT 'AA',
 | **`NE`** | Not Equal (같지 않음) | `LOW` 값만 사용 | `fieldName != LOW` (또는 `NOT =`) |
 | **`NP`** | Not Contains Pattern (패턴 불일치) | `LOW` 값만 사용 | `NOT (fieldName LIKE LOW)` |
 
-
 ```abap
-" 1. SELECT-OPTIONS 선언
-SELECT-OPTIONS: <so_name> FOR <field>.
-
-" 2. 헤더라인 변수에 값 설정 후 APPEND
-<so_name>-SIGN   = '<Include / Exclude>';   " 예: 'I' 또는 'E'
-<so_name>-OPTION = '<연산자>';            " 예: 'EQ', 'BT', 'GE' 등
-<so_name>-LOW    = '<시작값>';            " 범위 시작값
-<so_name>-HIGH   = '<끝값>';              " 범위 끝값 (BT일 경우)
-APPEND <so_name>.                           " 내부 테이블에 적용
-CLEAR <so_name>.                            " 헤더라인 초기화 후 다음 조건 설정
+SELECT-OPTIONS <seltab> FOR <field>.
 ```
 ```abap
-DATA: gt_flight TYPE TABLE OF sflight,
-      gs_flight TYPE sflight.
-
-" SELECT-OPTIONS 선언 (구조 필드 기준)
-SELECT-OPTIONS: so_conn FOR gs_flight-connid.
-
-INITIALIZATION.
-  " 포함 조건: 0400
-  so_conn-SIGN   = 'I'.
-  so_conn-OPTION = 'EQ'.
-  so_conn-LOW    = '0400'.
-  APPEND so_conn.
-  CLEAR so_conn.
-
-  " 제외 조건: 0401
-  so_conn-SIGN   = 'E'.
-  so_conn-OPTION = 'EQ'.
-  so_conn-LOW    = '0401'.
-  APPEND so_conn.
-  CLEAR so_conn.
-
-START-OF-SELECTION.
-  " 조건 적용 SELECT
-  SELECT *
-    FROM sflight
-    INTO TABLE gt_flight
-    WHERE connid IN so_conn.
-
-  cl_demo_output=>display( gt_flight ).      " 결과 : CONNID = 0400 만
+DATA gs_flight TYPE sflight.
+SELECT-OPTIONS: so_car FOR gs_flight-carrid DEFAULT 'AA',
+                so_fld FOR gs_flight-fldate.
 ```
-- 직접 번호를 지정한 사용자 정의 Selection Screen 생성
-```abap
-SELECTION-SCREEN BEGIN OF SCREEN <no>.
-  PARAMETERS ...
-  SELECT-OPTIONS ...
-SELECTION-SCREEN END OF SCREEN <no>.
-```
-```abap
-SELECTION-SCREEN BEGIN OF SCREEN 1100.
-PARAMETERS: p_name TYPE string.
-SELECT-OPTIONS: s_date FOR sy-datum.
-SELECTION-SCREEN END OF SCREEN 1100.
-```
+</br>
+
 </br>
 </br>
 
