Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -98,12 +98,26 @@ SELECT-OPTIONS: s_date FOR sy-datum.
 - `SELECT-OPTIONS`는 데이터베이스 테이블 필드를 직접 참조할 수 없고, 해당 필드가 포함된 이미 선언된 변수(Work Area 또는 Structure)의 필드를 통해 참조해야 함
 
 ```abap
-SELECT-OPTIONS <seltab> FOR <field>.
+SELECT-OPTIONS <seltab> FOR <field>
+  [DEFAULT <value>]
+  [DEFAULT <value1> TO <value2>]
+  [SIGN <I|E> OPTION <op>]
+  [MEMORY ID <pid>]
+  [LOWER CASE]
+  [OBLIGATORY]
+  [NO-EXTENSION]
+  [NO INTERVALS]
+  [MODIF ID <mod>].
 ```
 ```abap
-DATA gs_flight TYPE sflight.
-SELECT-OPTIONS: so_car FOR gs_flight-carrid DEFAULT 'AA',
-                so_fld FOR gs_flight-fldate.
+SELECT-OPTIONS so_car FOR sflight-carrid
+  DEFAULT 'AA'                 "초기값 AA
+  SIGN I OPTION EQ             "포함(I), 같음(EQ)
+  MEMORY ID CAR                "이전 입력값 자동 불러오기
+  OBLIGATORY                   "필수 입력
+  NO-EXTENSION                 "다중 선택 버튼 비활성화
+  NO INTERVALS                 "from~to 범위 입력 금지
+  MODIF ID A1.                 "화면 제어용 그룹 ID
 ```
 
 | ABAP OPTION 값 | 의미 (Meaning) | LOW/HIGH 사용 | SQL 연산자 개념 |
@@ -141,7 +155,7 @@ SELECTION-SCREEN END OF SCREEN 1100.
 - `LOWER CASE` : 소문자 입력 허용
 - `VALUE CHECK` : 도메인/서치헬프 기준으로 입력값 유효성 자동 검사
 - `MEMORY ID <pid>` : 이전에 입력했던 값을 SAP 메모리에서 자동 불러옴
-- `MODIF ID <mod>` : 같은 MODIF ID끼리 묶어 화면 활성/비활성 등 동적 제어에 사용
+- `MODIF ID <mod>` : 같은 MODIF ID끼리 묶어 화면 활성/비활성 등 동적 제어에 사용 (그룹핑)
 ```abap
 PARAMETERS <f>
   [TYPE <type> | LIKE <f1>]
