--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -15,7 +15,11 @@
 ## < ABAP 기본 문법 >
 </br>
 
-### 1) WRITE 추가 옵션
+### 1) ABAP 이벤트 
+</br>
+</br>
+
+### 2) WRITE 추가 옵션
 - `WRITE AT` : 위치 지정 출력 모드 선언
 - `<pos>(<len>)` : 출력 시작 열과 길이 지정
 - `COLOR <color>` : 출력 색상 지정
@@ -82,7 +86,7 @@ WRITE AT: / 1(10)  gv_char NO-GAP,
 </br>
 </br>
 
-### 2) Selection Screen
+### 3) Selection Screen
 - **프로그램 실행 시 표준 선택화면(Screen 1000) 자동 생성**
 ```abap
 PARAMETERS: ...
@@ -150,7 +154,7 @@ SELECTION-SCREEN END OF SCREEN 1100.
 </br>
 </br>
 
-### 3) PARAMETERS
+### 4) PARAMETERS
 - `OBLIGATORY` : 필수 입력값
 - `LOWER CASE` : 소문자 입력 허용
 - `VALUE CHECK` : 도메인/서치헬프 기준으로 입력값 유효성 자동 검사
