Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -2,7 +2,6 @@
 </br>
 
 - **1) Search Help (F4 도움말) 설정하기**
-
 </br>
 
 </br>
@@ -16,6 +15,42 @@
 </br>
 
 ### 1) ABAP 이벤트 
+- `LOAD-OF-PROGRAM` : 프로그램이 메모리에 로드될 때 한 번 실행됨
+- `INITIALIZATION` : Selection Screen이 처음 뜨기 전에 초기값을 설정함
+- `AT SELECTION-SCREEN OUTPUT (PBO)` : Selection Screen이 그려질 때마다 실행되어 화면을 제어함
+- `AT SELECTION-SCREEN (PAI)` : 사용자가 Enter나 실행을 누를 때 입력값을 검사함
+- `START-OF-SELECTION` : Selection Screen을 통과한 후 본 처리 로직이 시작됨
+```abap
+LOAD-OF-PROGRAM
+→ INITIALIZATION
+→ AT SELECTION-SCREEN OUTPUT   (PBO)
+→ [Selection Screen 표시]
+→ AT SELECTION-SCREEN          (PAI)
+→ START-OF-SELECTION
+```
+```abap
+LOAD-OF-PROGRAM.
+  "프로그램 로딩 시 1회 실행
+
+INITIALIZATION.
+  p_carr = 'AA'.   "초기값 세팅
+
+AT SELECTION-SCREEN OUTPUT.   "PBO
+  LOOP AT SCREEN.
+    IF screen-group1 = 'A1'.
+      screen-active = 0.
+    ENDIF.
+    MODIFY SCREEN.
+  ENDLOOP.
+
+AT SELECTION-SCREEN.          "PAI
+  IF p_carr IS INITIAL.
+    MESSAGE '필수 입력값 누락' TYPE 'E'.
+  ENDIF.
+
+START-OF-SELECTION.
+  PERFORM get_data.
+```
 </br>
 </br>
 
