Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -128,8 +128,20 @@ PARAMETERS: ...
 SELECT-OPTIONS: ...
 ```
 ```abap
-PARAMETERS: p_id TYPE string.
-SELECT-OPTIONS: s_date FOR sy-datum.
+SELECT-OPTIONS so_carr FOR sflight-carrid.
+
+INITIALIZATION.
+  MOVE: 'I'  TO so_carr-sign,
+        'BT' TO so_carr-option,
+        'AA' TO so_carr-low,
+        'LH' TO so_carr-high.
+  APPEND so_carr.
+  CLEAR so_carr.
+
+  MOVE: 'E'  TO so_carr-sign,
+        'EQ' TO so_carr-option,
+        'DL' TO so_carr-low.
+  APPEND so_carr.
 ```
 - `SELECT-OPTIONS` → 범위 입력용 선택 조건
 - `SELECT-OPTIONS` 는 헤더라인이 있는 내부 테이블이므로 `INTO` 생략 가능
