Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -127,6 +127,27 @@ WRITE AT: / 1(10)  gv_char NO-GAP,
 PARAMETERS: ...
 SELECT-OPTIONS: ...
 ```
+</br>
+
+- **직접 번호를 지정한 사용자 정의 Selection Screen 생성**
+```abap
+SELECTION-SCREEN BEGIN OF SCREEN <no>.
+  PARAMETERS ...
+  SELECT-OPTIONS ...
+SELECTION-SCREEN END OF SCREEN <no>.
+```
+```abap
+SELECTION-SCREEN BEGIN OF SCREEN 1100.
+  PARAMETERS: p_name TYPE string.
+  SELECT-OPTIONS: s_date FOR sy-datum.
+SELECTION-SCREEN END OF SCREEN 1100.
+```
+</br>
+
+### 3-1) SELECT-OPTIONS
+- `SELECT-OPTIONS` → 범위 입력용 선택 조건
+- `SELECT-OPTIONS` 는 헤더라인이 있는 내부 테이블이므로 `INTO` 생략 가능
+- 내부적으로 `SIGN / OPTION / LOW / HIGH` 구조
 ```abap
 SELECT-OPTIONS so_carr FOR sflight-carrid.
 
@@ -143,9 +164,6 @@ INITIALIZATION.
         'DL' TO so_carr-low.
   APPEND so_carr.
 ```
-- `SELECT-OPTIONS` → 범위 입력용 선택 조건
-- `SELECT-OPTIONS` 는 헤더라인이 있는 내부 테이블이므로 `INTO` 생략 가능
-- 내부적으로 `SIGN / OPTION / LOW / HIGH` 구조
 - `SELECT-OPTIONS`는 데이터베이스 테이블 필드를 직접 참조할 수 없고, 해당 필드가 포함된 이미 선언된 변수(Work Area 또는 Structure)의 필드를 통해 참조해야 함
 
 ```abap
@@ -183,21 +201,6 @@ SELECT-OPTIONS so_car FOR sflight-carrid
 | **`NE`** | Not Equal (같지 않음) | `LOW` 값만 사용 | `fieldName != LOW` (또는 `NOT =`) |
 | **`NP`** | Not Contains Pattern (패턴 불일치) | `LOW` 값만 사용 | `NOT (fieldName LIKE LOW)` |
 
-</br>
-
-- **직접 번호를 지정한 사용자 정의 Selection Screen 생성**
-```abap
-SELECTION-SCREEN BEGIN OF SCREEN <no>.
-  PARAMETERS ...
-  SELECT-OPTIONS ...
-SELECTION-SCREEN END OF SCREEN <no>.
-```
-```abap
-SELECTION-SCREEN BEGIN OF SCREEN 1100.
-  PARAMETERS: p_name TYPE string.
-  SELECT-OPTIONS: s_date FOR sy-datum.
-SELECTION-SCREEN END OF SCREEN 1100.
-```
 </br>
 </br>
 
