Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -329,3 +329,82 @@ ENDCASE.
 </br>
 
 ## < 실습 코드 >
+### 실습 1
+- Selection screen 예제
+</br>
+
+- Program 코드에 `TOP` , `E01` 모듈 생성
+```abap
+REPORT ZPROGB03_0027.
+
+INCLUDE ZPROGB03_0027_TOP.
+INCLUDE ZPROGB03_0027_E01.
+```
+- `TOP` 모듈 생성
+```abap
+DATA: gs_flight TYPE dv_flights,
+      gt_flight TYPE TABLE OF dv_flights.
+
+PARAMETERS: pa_carr LIKE gs_flight-carrid DEFAULT 'AA',
+            pa_conn TYPE s_conn_id MEMORY ID con.
+
+SELECTION-SCREEN SKIP 2. "두줄 띄우기
+
+SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME TITLE TEXT-001.
+
+  PARAMETERS: pa_rad1 RADIOBUTTON GROUP rad,
+              pa_rad2 RADIOBUTTON GROUP rad DEFAULT 'X',
+              pa_rad3 RADIOBUTTON GROUP rad.
+  SELECT-OPTIONS: so_car FOR gs_flight-carrid DEFAULT 'AA' TO 'LH',
+                  so_con FOR gs_flight-connid DEFAULT '0017' NO-EXTENSION. " NO INTERVALS
+
+SELECTION-SCREEN END OF BLOCK blk1.
+
+SELECTION-SCREEN BEGIN OF BLOCK blk2 WITH FRAME.
+
+  SELECTION-SCREEN BEGIN OF LINE.
+    SELECTION-SCREEN COMMENT 1(8) TEXT-002.
+    PARAMETERS: pa_name AS CHECKBOX DEFAULT 'X'.
+    SELECTION-SCREEN COMMENT 20(8) TEXT-003.
+    PARAMETERS: pa_curr AS CHECKBOX.
+  SELECTION-SCREEN END OF LINE.
+
+SELECTION-SCREEN END OF BLOCK blk2.
+```
+- `E01` 모듈 생성
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0027_E01
+*&---------------------------------------------------------------------*
+
+INITIALIZATION.
+SO_CAR-sign = 'I'.
+SO_CAR-option = 'BT'.
+SO_CAR-LOW = 'AA'.
+SO_CAR-HIGH = 'AZ'.
+APPEND SO_CAR.
+
+CLEAR SO_CAR. " Header (Structure)만 클리어됨
+SO_CAR-sign = 'E'.
+SO_CAR-option = 'EQ'.
+SO_CAR-LOW = 'LH'.
+APPEND SO_CAR.
+
+START-OF-SELECTION.
+
+SELECT *
+  FROM dv_flights
+  INTO TABLE gt_flight
+  WHERE CARRID = 'AA'
+    AND CONNID = '0017'.
+
+IF SY-SUBRC = 0.
+  LOOP AT gt_flight INTO gs_flight.
+    WRITE:/ gs_flight-carrid,
+            gs_flight-connid,
+            gs_flight-fldate,
+            gs_flight-cityfrom,
+            gs_flight-cityto.
+  ENDLOOP.
+ENDIF.
+```
