Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -406,7 +406,95 @@ IF SY-SUBRC = 0.
   ENDLOOP.
 ENDIF.
 ```
+- 결과 확인
+
+</br>
+</br>
 </br>
 </br>
 
 ### 실습 2
+- Selection screen 예제
+</br>
+
+- Program 코드에 `TOP` , `E01` 모듈 생성
+```abap
+REPORT ZBC400_B03_PRACTICE4.
+
+INCLUDE ZBC400_B03_PRACTICE4_TOP.
+INCLUDE ZBC400_B03_PRACTICE4_E01.
+```
+- `TOP` 모듈 생성
+```abap
+DATA: gs_flight TYPE dv_flights,
+      gt_flight TYPE TABLE OF dv_flights.
+
+SELECT-OPTIONS: so_car FOR gs_flight-carrid MEMORY ID car,
+                so_con FOR gs_flight-connid,
+                so_dat FOR gs_flight-fldate NO-EXTENSION.
+
+SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME.
+  PARAMETERS: pa_rad1 RADIOBUTTON GROUP rad,
+              pa_rad2 RADIOBUTTON GROUP rad,
+              pa_rad3 RADIOBUTTON GROUP rad DEFAULT 'X'.
+SELECTION-SCREEN END OF BLOCK blk1.
+```
+- `E01` 모듈 생성
+```abap
+INITIALIZATION.
+  so_car-sign = 'I'.
+  so_car-option = 'BT'.
+  so_car-low = 'AA'.
+  so_car-high = 'QZ'.
+  APPEND so_car.
+
+  CLEAR so_car.
+  so_car-sign = 'E'.
+  so_car-option = 'EQ'.
+  so_car-low = 'AZ'.
+  APPEND so_car.
+
+START-OF-SELECTION.
+  CASE 'X'.
+    WHEN pa_rad1.
+      SELECT * FROM dv_flights
+        INTO TABLE gt_flight
+        WHERE carrid IN so_car
+          AND connid IN so_con
+          AND fldate IN so_dat.
+    WHEN pa_rad2.
+      SELECT * FROM dv_flights
+        INTO TABLE gt_flight
+        WHERE carrid IN so_car
+          AND connid IN so_con
+          AND fldate IN so_dat
+          AND countryto = dv_flights~countryfr.
+    WHEN pa_rad3.
+      SELECT * FROM dv_flights
+        INTO TABLE gt_flight
+        WHERE carrid IN so_car
+          AND connid IN so_con
+          AND fldate IN so_dat
+          AND countryto <> dv_flights~countryfr.
+    WHEN OTHERS.
+  ENDCASE.
+
+  LOOP AT gt_flight INTO gs_flight.
+    WRITE:/ gs_flight-carrid,
+            gs_flight-connid,
+            gs_flight-fldate,
+            gs_flight-countryfr,
+            gs_flight-cityfrom,
+            gs_flight-airpfrom,
+            gs_flight-countryto,
+            gs_flight-cityto,
+            gs_flight-airpto,
+            gs_flight-price,
+            gs_flight-currency,
+            gs_flight-seatsmax,
+            gs_flight-seatsocc.
+  ENDLOOP.
+```
+- 결과 확인
+  
+<img width="565" height="204" alt="image" src="https://github.com/user-attachments/assets/b694d73b-55ca-4b64-8327-79d87c8aa313" />
