Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -415,6 +415,7 @@ ENDIF.
 
 ### 실습 2
 - Selection screen 예제
+- 라디오버튼에 따라 조건에 맞는 all / 국제선 / 국내선 조회 프로그램
 </br>
 
 - Program 코드에 `TOP` , `E01` 모듈 생성
