--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -407,6 +407,11 @@ IF SY-SUBRC = 0.
 ENDIF.
 ```
 - 결과 확인
+<img width="454" height="248" alt="image" src="https://github.com/user-attachments/assets/30389e0a-7f6a-482b-a2c7-946649622acc" />
+</br>
+</br>
+
+<img width="287" height="208" alt="image" src="https://github.com/user-attachments/assets/94fd9122-9436-43d6-8084-4d3dd75ac8fa" />
 
 </br>
 </br>
