--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -504,5 +504,9 @@ START-OF-SELECTION.
   ENDLOOP.
 ```
 - 결과 확인
-  
+
+<img width="452" height="167" alt="image" src="https://github.com/user-attachments/assets/23f1275d-d713-42d9-a42c-9280a42a30b4" />
+</br>
+</br>
+
 <img width="565" height="204" alt="image" src="https://github.com/user-attachments/assets/b694d73b-55ca-4b64-8327-79d87c8aa313" />
