Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -441,9 +441,9 @@ SELECT-OPTIONS: so_car FOR gs_flight-carrid MEMORY ID car,
                 so_dat FOR gs_flight-fldate NO-EXTENSION.
 
 SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME.
-  PARAMETERS: pa_rad1 RADIOBUTTON GROUP rad,
-              pa_rad2 RADIOBUTTON GROUP rad,
-              pa_rad3 RADIOBUTTON GROUP rad DEFAULT 'X'.
+  PARAMETERS: pa_all RADIOBUTTON GROUP rad,
+              pa_nat RADIOBUTTON GROUP rad,
+              pa_int RADIOBUTTON GROUP rad DEFAULT 'X'.
 SELECTION-SCREEN END OF BLOCK blk1.
 ```
 - `E01` 모듈 생성
@@ -463,26 +463,26 @@ INITIALIZATION.
 
 START-OF-SELECTION.
   CASE 'X'.
-    WHEN pa_rad1.
+    WHEN pa_all.
       SELECT * FROM dv_flights
         INTO TABLE gt_flight
         WHERE carrid IN so_car
           AND connid IN so_con
           AND fldate IN so_dat.
-    WHEN pa_rad2.
-      SELECT * FROM dv_flights
-        INTO TABLE gt_flight
-        WHERE carrid IN so_car
-          AND connid IN so_con
-          AND fldate IN so_dat
-          AND countryto = dv_flights~countryfr.
-    WHEN pa_rad3.
+    WHEN pa_nat.
       SELECT * FROM dv_flights
         INTO TABLE gt_flight
         WHERE carrid IN so_car
           AND connid IN so_con
           AND fldate IN so_dat
           AND countryto <> dv_flights~countryfr.
+    WHEN pa_int.
+      SELECT * FROM dv_flights
+        INTO TABLE gt_flight
+        WHERE carrid IN so_car
+          AND connid IN so_con
+          AND fldate IN so_dat
+          AND countryto = dv_flights~countryfr.
     WHEN OTHERS.
   ENDCASE.
 
