Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -1,7 +1,8 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) Search Help (F4 도움말) 설정하기**
+- **1) ABAP 이벤트**
+- **2) Selection Screen - Selection Screen Block / Selection Screen Lines**
 </br>
 
 </br>
