--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -257,7 +257,58 @@ SELECTION-SCREEN BEGIN OF LINE.
 
 SELECTION-SCREEN END OF LINE.
 ```
+</br>
 
+### 3-4) 추가 Selection Screen 호출 (Calling Additional Selection Screens)
+- 기본 Selection Screen(Screen 1000)에서 조건에 따라 다른 Selection Screen(예: 1100) 을 추가로 띄움
+```abap
+SELECTION-SCREEN BEGIN OF SCREEN <screen_no>.
+  PARAMETERS / SELECT-OPTIONS
+SELECTION-SCREEN END OF SCREEN <screen_no>.
+
+AT SELECTION-SCREEN ON <field>.
+  CALL SELECTION-SCREEN <screen_no>
+    STARTING AT <x> <y>
+    ENDING   AT <x> <y>.
+```
+```abap
+SELECTION-SCREEN BEGIN OF SCREEN <screen_no>.
+  PARAMETERS / SELECT-OPTIONS
+SELECTION-SCREEN END OF SCREEN <screen_no>.
+
+AT SELECTION-SCREEN ON <field>.
+  CALL SELECTION-SCREEN <screen_no>
+    STARTING AT <x> <y>
+    ENDING   AT <x> <y>.
+```
+</br>
+
+### 3-5) Selection Screen을 Subscreen으로 정의
+- Selection Screen을 서브스크린(Subscreen) 으로 만들어 하나의 메인 화면 안에서 여러 선택 화면을 나눠서 사용
+```abap
+SELECTION-SCREEN BEGIN OF SCREEN <screen_no> AS SUBSCREEN.
+  PARAMETERS / SELECT-OPTIONS
+SELECTION-SCREEN END OF SCREEN <screen_no>.
+```
+```abap
+DATA gs_spfli TYPE spfli.
+
+SELECTION-SCREEN BEGIN OF SCREEN 101 AS SUBSCREEN.
+SELECT-OPTIONS:
+  so_car FOR gs_spfli-carrid,
+  so_con FOR gs_spfli-connid.
+SELECTION-SCREEN END OF SCREEN 101.
+
+SELECTION-SCREEN BEGIN OF SCREEN 102 AS SUBSCREEN.
+PARAMETERS p_city TYPE spfli-cityfrom.
+SELECTION-SCREEN END OF SCREEN 102.
+
+SELECTION-SCREEN BEGIN OF SCREEN 103 AS SUBSCREEN.
+PARAMETERS p_country TYPE spfli-countryfr.
+SELECTION-SCREEN END OF SCREEN 103.
+```
+- Selection Screen에 탭(Tabstrip) 을 만들어 여러 선택 화면을 탭으로 전환해서 표시
+- 각 탭은 서브스크린(Screen 번호) 과 연결됨
 </br>
 </br>
 
