Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -12,6 +12,94 @@
 
 </br>
 
+## < Selection Screen >
+- **프로그램 실행 시 표준 선택화면(Screen 1000) 자동 생성**
+```abap
+PARAMETERS: ...
+SELECT-OPTIONS: ...
+```
+- **직접 번호를 지정한 사용자 정의 Selection Screen 생성**
+```abap
+SELECTION-SCREEN BEGIN OF SCREEN <no>.
+  PARAMETERS ...
+  SELECT-OPTIONS ...
+SELECTION-SCREEN END OF SCREEN <no>.
+```
+```abap
+SELECTION-SCREEN BEGIN OF SCREEN 1100.
+  PARAMETERS: p_name TYPE string.
+  SELECT-OPTIONS: s_date FOR sy-datum.
+SELECTION-SCREEN END OF SCREEN 1100.
+```
+</br>
+</br>
+
+### 1) SELECT-OPTIONS
+- `SELECT-OPTIONS` → 범위 입력용 선택 조건
+- `SELECT-OPTIONS` 는 헤더라인이 있는 내부 테이블이므로 `INTO` 생략 가능
+- 내부적으로 `SIGN / OPTION / LOW / HIGH` 구조
+```abap
+SELECT-OPTIONS so_carr FOR sflight-carrid.
+
+INITIALIZATION.
+  MOVE: 'I'  TO so_carr-sign,
+        'BT' TO so_carr-option,
+        'AA' TO so_carr-low,
+        'LH' TO so_carr-high.
+  APPEND so_carr.
+  CLEAR so_carr.
+
+  MOVE: 'E'  TO so_carr-sign,
+        'EQ' TO so_carr-option,
+        'DL' TO so_carr-low.
+  APPEND so_carr.
+```
+- `SELECT-OPTIONS`는 데이터베이스 테이블 필드를 직접 참조할 수 없고, 해당 필드가 포함된 이미 선언된 변수(Work Area 또는 Structure)의 필드를 통해 참조해야 함
+
+```abap
+SELECT-OPTIONS <seltab> FOR <field>
+  [DEFAULT <value>]
+  [DEFAULT <value1> TO <value2>]
+  [SIGN <I|E> OPTION <op>]
+  [MEMORY ID <pid>]
+  [LOWER CASE]
+  [OBLIGATORY]
+  [NO-EXTENSION]
+  [NO INTERVALS]
+  [MODIF ID <mod>].
+```
+```abap
+SELECT-OPTIONS so_car FOR sflight-carrid
+  DEFAULT 'AA'                 "초기값 AA
+  SIGN I OPTION EQ             "포함(I), 같음(EQ)
+  MEMORY ID CAR                "이전 입력값 자동 불러오기
+  OBLIGATORY                   "필수 입력
+  NO-EXTENSION                 "다중 선택 버튼 비활성화
+  NO INTERVALS                 "from~to 범위 입력 금지
+  MODIF ID A1.                 "화면 제어용 그룹 ID
+```
+
+| ABAP OPTION 값 | 의미 (Meaning) | LOW/HIGH 사용 | SQL 연산자 개념 |
+| :---: | :--- | :---: | :---: |
+| **`EQ`** | Equal (같음) | `LOW` 값만 사용 | `fieldName = LOW` |
+| **`BT`** | Between (사이) | `LOW`와 `HIGH` 값 모두 사용 | `fieldName BETWEEN LOW AND HIGH` |
+| **`GE`** | Greater or Equal (크거나 같음) | `LOW` 값만 사용 | `fieldName >= LOW` |
+| **`LE`** | Less or Equal (작거나 같음) | `LOW` 값만 사용 | `fieldName <= LOW` |
+| **`GT`** | Greater Than (초과) | `LOW` 값만 사용 | `fieldName > LOW` |
+| **`LT`** | Less Than (미만) | `LOW` 값만 사용 | `fieldName < LOW` |
+| **`CP`** | Contains Pattern (패턴 포함) | `LOW` 값만 사용 (`*`, `?` 등 사용) | `fieldName LIKE LOW` |
+| **`NE`** | Not Equal (같지 않음) | `LOW` 값만 사용 | `fieldName != LOW` (또는 `NOT =`) |
+| **`NP`** | Not Contains Pattern (패턴 불일치) | `LOW` 값만 사용 | `NOT (fieldName LIKE LOW)` |
+
+</br>
+
+</br>
+</br>
+
+---
+
+</br>
+
 ## < ABAP 기본 문법 >
 </br>
 
@@ -122,85 +210,7 @@ WRITE AT: / 1(10)  gv_char NO-GAP,
 </br>
 </br>
 
-### 3) Selection Screen
-- **프로그램 실행 시 표준 선택화면(Screen 1000) 자동 생성**
-```abap
-PARAMETERS: ...
-SELECT-OPTIONS: ...
-```
-- **직접 번호를 지정한 사용자 정의 Selection Screen 생성**
-```abap
-SELECTION-SCREEN BEGIN OF SCREEN <no>.
-  PARAMETERS ...
-  SELECT-OPTIONS ...
-SELECTION-SCREEN END OF SCREEN <no>.
-```
-```abap
-SELECTION-SCREEN BEGIN OF SCREEN 1100.
-  PARAMETERS: p_name TYPE string.
-  SELECT-OPTIONS: s_date FOR sy-datum.
-SELECTION-SCREEN END OF SCREEN 1100.
-```
-</br>
 
-### 3-1) SELECT-OPTIONS
-- `SELECT-OPTIONS` → 범위 입력용 선택 조건
-- `SELECT-OPTIONS` 는 헤더라인이 있는 내부 테이블이므로 `INTO` 생략 가능
-- 내부적으로 `SIGN / OPTION / LOW / HIGH` 구조
-```abap
-SELECT-OPTIONS so_carr FOR sflight-carrid.
-
-INITIALIZATION.
-  MOVE: 'I'  TO so_carr-sign,
-        'BT' TO so_carr-option,
-        'AA' TO so_carr-low,
-        'LH' TO so_carr-high.
-  APPEND so_carr.
-  CLEAR so_carr.
-
-  MOVE: 'E'  TO so_carr-sign,
-        'EQ' TO so_carr-option,
-        'DL' TO so_carr-low.
-  APPEND so_carr.
-```
-- `SELECT-OPTIONS`는 데이터베이스 테이블 필드를 직접 참조할 수 없고, 해당 필드가 포함된 이미 선언된 변수(Work Area 또는 Structure)의 필드를 통해 참조해야 함
-
-```abap
-SELECT-OPTIONS <seltab> FOR <field>
-  [DEFAULT <value>]
-  [DEFAULT <value1> TO <value2>]
-  [SIGN <I|E> OPTION <op>]
-  [MEMORY ID <pid>]
-  [LOWER CASE]
-  [OBLIGATORY]
-  [NO-EXTENSION]
-  [NO INTERVALS]
-  [MODIF ID <mod>].
-```
-```abap
-SELECT-OPTIONS so_car FOR sflight-carrid
-  DEFAULT 'AA'                 "초기값 AA
-  SIGN I OPTION EQ             "포함(I), 같음(EQ)
-  MEMORY ID CAR                "이전 입력값 자동 불러오기
-  OBLIGATORY                   "필수 입력
-  NO-EXTENSION                 "다중 선택 버튼 비활성화
-  NO INTERVALS                 "from~to 범위 입력 금지
-  MODIF ID A1.                 "화면 제어용 그룹 ID
-```
-
-| ABAP OPTION 값 | 의미 (Meaning) | LOW/HIGH 사용 | SQL 연산자 개념 |
-| :---: | :--- | :---: | :---: |
-| **`EQ`** | Equal (같음) | `LOW` 값만 사용 | `fieldName = LOW` |
-| **`BT`** | Between (사이) | `LOW`와 `HIGH` 값 모두 사용 | `fieldName BETWEEN LOW AND HIGH` |
-| **`GE`** | Greater or Equal (크거나 같음) | `LOW` 값만 사용 | `fieldName >= LOW` |
-| **`LE`** | Less or Equal (작거나 같음) | `LOW` 값만 사용 | `fieldName <= LOW` |
-| **`GT`** | Greater Than (초과) | `LOW` 값만 사용 | `fieldName > LOW` |
-| **`LT`** | Less Than (미만) | `LOW` 값만 사용 | `fieldName < LOW` |
-| **`CP`** | Contains Pattern (패턴 포함) | `LOW` 값만 사용 (`*`, `?` 등 사용) | `fieldName LIKE LOW` |
-| **`NE`** | Not Equal (같지 않음) | `LOW` 값만 사용 | `fieldName != LOW` (또는 `NOT =`) |
-| **`NP`** | Not Contains Pattern (패턴 불일치) | `LOW` 값만 사용 | `NOT (fieldName LIKE LOW)` |
-
-</br>
 
 ### 3-2) Selection Screen Block
 - `Selection Screen` 을 **논리적인 그룹(박스)**으로 묶어 화면을 보기 좋게 구성
