Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -92,7 +92,116 @@ SELECT-OPTIONS so_car FOR sflight-carrid
 | **`NP`** | Not Contains Pattern (패턴 불일치) | `LOW` 값만 사용 | `NOT (fieldName LIKE LOW)` |
 
 </br>
+</br>
 
+### 3) Selection Screen Block
+- `Selection Screen` 을 **논리적인 그룹(박스)**으로 묶어 화면을 보기 좋게 구성
+- `WITH FRAME` 를 쓰면 테두리 박스가 생김
+- TITLE로 블록 제목 표시 가능
+- 블록 안에는 PARAMETERS, SELECT-OPTIONS 모두 배치 가능
+```abap
+SELECTION-SCREEN BEGIN OF BLOCK <block>
+  [WITH FRAME [TITLE <text>]].
+
+  " PARAMETERS / SELECT-OPTIONS 선언
+
+SELECTION-SCREEN END OF BLOCK <block>.
+```
+```abap
+REPORT bc405_screen_d5a.
+
+SELECTION-SCREEN BEGIN OF BLOCK limit
+  WITH FRAME TITLE text-001.
+
+PARAMETERS:
+  pa_lim_1 RADIOBUTTON GROUP lim DEFAULT 'X',
+  pa_lim_2 RADIOBUTTON GROUP lim,
+  pa_lim_3 RADIOBUTTON GROUP lim.
+
+SELECTION-SCREEN END OF BLOCK limit.
+```
+</br>
+
+### 4) Selection Screen Lines
+- Selection Screen에서 여러 필드를 한 줄(row)에 나란히 배치하기 위한 문법
+- 라벨(COMMENT), 위치(POSITION), 입력필드(PARAMETERS)를 한 줄로 묶음
+```abap
+SELECTION-SCREEN BEGIN OF LINE.
+  SELECTION-SCREEN COMMENT <pos>(<len>) <text> [FOR FIELD <field>].
+  SELECTION-SCREEN POSITION <pos>.
+  PARAMETERS <p> ...
+SELECTION-SCREEN END OF LINE.
+```
+- `BEGIN OF LINE / END OF LINE` → 같은 줄에 화면 요소 배치
+- `COMMENT pos(len) text` → 화면에 설명 텍스트 출력
+- `FOR FIELD <field>` → 해당 입력 필드와 텍스트 연결
+- `POSITION pos` → 출력 시작 위치 직접 지정
+```abap
+REPORT bc405_screen_d4b.
+
+SELECTION-SCREEN BEGIN OF LINE.
+
+  SELECTION-SCREEN COMMENT 1(20) text-s03.
+  SELECTION-SCREEN COMMENT pos_low(8) text-s04 FOR FIELD pa_col.
+  PARAMETERS pa_col AS CHECKBOX.
+  SELECTION-SCREEN COMMENT pos_high(8) text-s05.
+  PARAMETERS pa_ico AS CHECKBOX.
+
+SELECTION-SCREEN END OF LINE.
+```
+</br>
+
+### 5) 추가 Selection Screen 호출 (Calling Additional Selection Screens)
+- 기본 Selection Screen(Screen 1000)에서 조건에 따라 다른 Selection Screen(예: 1100) 을 추가로 띄움
+```abap
+SELECTION-SCREEN BEGIN OF SCREEN <screen_no>.
+  PARAMETERS / SELECT-OPTIONS
+SELECTION-SCREEN END OF SCREEN <screen_no>.
+
+AT SELECTION-SCREEN ON <field>.
+  CALL SELECTION-SCREEN <screen_no>
+    STARTING AT <x> <y>
+    ENDING   AT <x> <y>.
+```
+```abap
+SELECTION-SCREEN BEGIN OF SCREEN <screen_no>.
+  PARAMETERS / SELECT-OPTIONS
+SELECTION-SCREEN END OF SCREEN <screen_no>.
+
+AT SELECTION-SCREEN ON <field>.
+  CALL SELECTION-SCREEN <screen_no>
+    STARTING AT <x> <y>
+    ENDING   AT <x> <y>.
+```
+</br>
+
+### 6) Selection Screen을 Subscreen으로 정의
+- Selection Screen을 서브스크린(Subscreen) 으로 만들어 하나의 메인 화면 안에서 여러 선택 화면을 나눠서 사용
+```abap
+SELECTION-SCREEN BEGIN OF SCREEN <screen_no> AS SUBSCREEN.
+  PARAMETERS / SELECT-OPTIONS
+SELECTION-SCREEN END OF SCREEN <screen_no>.
+```
+```abap
+DATA gs_spfli TYPE spfli.
+
+SELECTION-SCREEN BEGIN OF SCREEN 101 AS SUBSCREEN.
+SELECT-OPTIONS:
+  so_car FOR gs_spfli-carrid,
+  so_con FOR gs_spfli-connid.
+SELECTION-SCREEN END OF SCREEN 101.
+
+SELECTION-SCREEN BEGIN OF SCREEN 102 AS SUBSCREEN.
+PARAMETERS p_city TYPE spfli-cityfrom.
+SELECTION-SCREEN END OF SCREEN 102.
+
+SELECTION-SCREEN BEGIN OF SCREEN 103 AS SUBSCREEN.
+PARAMETERS p_country TYPE spfli-countryfr.
+SELECTION-SCREEN END OF SCREEN 103.
+```
+- Selection Screen에 탭(Tabstrip) 을 만들어 여러 선택 화면을 탭으로 전환해서 표시
+- 각 탭은 서브스크린(Screen 번호) 과 연결됨
+</br>
 </br>
 </br>
 
@@ -210,119 +319,7 @@ WRITE AT: / 1(10)  gv_char NO-GAP,
 </br>
 </br>
 
-
-
-### 3-2) Selection Screen Block
-- `Selection Screen` 을 **논리적인 그룹(박스)**으로 묶어 화면을 보기 좋게 구성
-- `WITH FRAME` 를 쓰면 테두리 박스가 생김
-- TITLE로 블록 제목 표시 가능
-- 블록 안에는 PARAMETERS, SELECT-OPTIONS 모두 배치 가능
-```abap
-SELECTION-SCREEN BEGIN OF BLOCK <block>
-  [WITH FRAME [TITLE <text>]].
-
-  " PARAMETERS / SELECT-OPTIONS 선언
-
-SELECTION-SCREEN END OF BLOCK <block>.
-```
-```abap
-REPORT bc405_screen_d5a.
-
-SELECTION-SCREEN BEGIN OF BLOCK limit
-  WITH FRAME TITLE text-001.
-
-PARAMETERS:
-  pa_lim_1 RADIOBUTTON GROUP lim DEFAULT 'X',
-  pa_lim_2 RADIOBUTTON GROUP lim,
-  pa_lim_3 RADIOBUTTON GROUP lim.
-
-SELECTION-SCREEN END OF BLOCK limit.
-```
-</br>
-
-### 3-3) Selection Screen Lines
-- Selection Screen에서 여러 필드를 한 줄(row)에 나란히 배치하기 위한 문법
-- 라벨(COMMENT), 위치(POSITION), 입력필드(PARAMETERS)를 한 줄로 묶음
-```abap
-SELECTION-SCREEN BEGIN OF LINE.
-  SELECTION-SCREEN COMMENT <pos>(<len>) <text> [FOR FIELD <field>].
-  SELECTION-SCREEN POSITION <pos>.
-  PARAMETERS <p> ...
-SELECTION-SCREEN END OF LINE.
-```
-- `BEGIN OF LINE / END OF LINE` → 같은 줄에 화면 요소 배치
-- `COMMENT pos(len) text` → 화면에 설명 텍스트 출력
-- `FOR FIELD <field>` → 해당 입력 필드와 텍스트 연결
-- `POSITION pos` → 출력 시작 위치 직접 지정
-```abap
-REPORT bc405_screen_d4b.
-
-SELECTION-SCREEN BEGIN OF LINE.
-
-  SELECTION-SCREEN COMMENT 1(20) text-s03.
-  SELECTION-SCREEN COMMENT pos_low(8) text-s04 FOR FIELD pa_col.
-  PARAMETERS pa_col AS CHECKBOX.
-  SELECTION-SCREEN COMMENT pos_high(8) text-s05.
-  PARAMETERS pa_ico AS CHECKBOX.
-
-SELECTION-SCREEN END OF LINE.
-```
-</br>
-
-### 3-4) 추가 Selection Screen 호출 (Calling Additional Selection Screens)
-- 기본 Selection Screen(Screen 1000)에서 조건에 따라 다른 Selection Screen(예: 1100) 을 추가로 띄움
-```abap
-SELECTION-SCREEN BEGIN OF SCREEN <screen_no>.
-  PARAMETERS / SELECT-OPTIONS
-SELECTION-SCREEN END OF SCREEN <screen_no>.
-
-AT SELECTION-SCREEN ON <field>.
-  CALL SELECTION-SCREEN <screen_no>
-    STARTING AT <x> <y>
-    ENDING   AT <x> <y>.
-```
-```abap
-SELECTION-SCREEN BEGIN OF SCREEN <screen_no>.
-  PARAMETERS / SELECT-OPTIONS
-SELECTION-SCREEN END OF SCREEN <screen_no>.
-
-AT SELECTION-SCREEN ON <field>.
-  CALL SELECTION-SCREEN <screen_no>
-    STARTING AT <x> <y>
-    ENDING   AT <x> <y>.
-```
-</br>
-
-### 3-5) Selection Screen을 Subscreen으로 정의
-- Selection Screen을 서브스크린(Subscreen) 으로 만들어 하나의 메인 화면 안에서 여러 선택 화면을 나눠서 사용
-```abap
-SELECTION-SCREEN BEGIN OF SCREEN <screen_no> AS SUBSCREEN.
-  PARAMETERS / SELECT-OPTIONS
-SELECTION-SCREEN END OF SCREEN <screen_no>.
-```
-```abap
-DATA gs_spfli TYPE spfli.
-
-SELECTION-SCREEN BEGIN OF SCREEN 101 AS SUBSCREEN.
-SELECT-OPTIONS:
-  so_car FOR gs_spfli-carrid,
-  so_con FOR gs_spfli-connid.
-SELECTION-SCREEN END OF SCREEN 101.
-
-SELECTION-SCREEN BEGIN OF SCREEN 102 AS SUBSCREEN.
-PARAMETERS p_city TYPE spfli-cityfrom.
-SELECTION-SCREEN END OF SCREEN 102.
-
-SELECTION-SCREEN BEGIN OF SCREEN 103 AS SUBSCREEN.
-PARAMETERS p_country TYPE spfli-countryfr.
-SELECTION-SCREEN END OF SCREEN 103.
-```
-- Selection Screen에 탭(Tabstrip) 을 만들어 여러 선택 화면을 탭으로 전환해서 표시
-- 각 탭은 서브스크린(Screen 번호) 과 연결됨
-</br>
-</br>
-
-### 4) PARAMETERS
+### 3) PARAMETERS
 - `OBLIGATORY` : 필수 입력값
 - `LOWER CASE` : 소문자 입력 허용
 - `VALUE CHECK` : 도메인/서치헬프 기준으로 입력값 유효성 자동 검사
