Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -153,57 +153,59 @@ SELECTION-SCREEN END OF LINE.
 </br>
 </br>
 
-### 4) 추가 Selection Screen 호출 (Calling Additional Selection Screens)
-- 기본 Selection Screen(Screen 1000)에서 조건에 따라 다른 Selection Screen(예: 1100) 을 추가로 띄움
+### 4) AT SELECTION-SCREEN ON <field>
+- 특정 입력 필드 하나에 대해서만 사용자가 값을 입력하고 실행했을 때 실행되는 이벤트
+- Selection Screen의 PAI 단계(입력 처리)
 ```abap
-SELECTION-SCREEN BEGIN OF SCREEN <screen_no>.
-  PARAMETERS / SELECT-OPTIONS
-SELECTION-SCREEN END OF SCREEN <screen_no>.
-
 AT SELECTION-SCREEN ON <field>.
-  CALL SELECTION-SCREEN <screen_no>
-    STARTING AT <x> <y>
-    ENDING   AT <x> <y>.
+  IF <field> = 'X'.
+    CALL SELECTION-SCREEN <screen_no>
+      STARTING AT <x1> <y1>
+      ENDING   AT <x2> <y2>.
+  ENDIF.
 ```
 ```abap
-SELECTION-SCREEN BEGIN OF SCREEN <screen_no>.
-  PARAMETERS / SELECT-OPTIONS
-SELECTION-SCREEN END OF SCREEN <screen_no>.
+SELECTION-SCREEN BEGIN OF SCREEN 1100.
+PARAMETERS:
+  pa_cus AS CHECKBOX,
+  pa_agy AS CHECKBOX.
+SELECTION-SCREEN END OF SCREEN 1100.
 
-AT SELECTION-SCREEN ON <field>.
-  CALL SELECTION-SCREEN <screen_no>
-    STARTING AT <x> <y>
-    ENDING   AT <x> <y>.
+AT SELECTION-SCREEN ON pa_add.
+  IF pa_add = 'X'.
+    CALL SELECTION-SCREEN 1100
+      STARTING AT 5 5
+      ENDING   AT 50 10.
+
+    IF sy-subrc <> 0.
+      LEAVE TO SCREEN 1000.
+    ENDIF.
+  ENDIF.
 ```
 </br>
 </br>
 
 ### 5) Selection Screen을 Subscreen으로 정의
-- Selection Screen을 서브스크린(Subscreen) 으로 만들어 하나의 메인 화면 안에서 여러 선택 화면을 나눠서 사용
+- 서브스크린 코드 형식
 ```abap
-SELECTION-SCREEN BEGIN OF SCREEN <screen_no> AS SUBSCREEN.
-  PARAMETERS / SELECT-OPTIONS
-SELECTION-SCREEN END OF SCREEN <screen_no>.
+SELECTION-SCREEN BEGIN OF SCREEN <서브스크린번호> AS SUBSCREEN.
+  PARAMETERS / SELECT-OPTIONS <입력필드>.
+SELECTION-SCREEN END OF SCREEN <서브스크린번호>.
 ```
+- 탭스트립 코드 형식
 ```abap
-DATA gs_spfli TYPE spfli.
+SELECTION-SCREEN BEGIN OF TABBED BLOCK <탭블록명> FOR <라인수> LINES.
 
-SELECTION-SCREEN BEGIN OF SCREEN 101 AS SUBSCREEN.
-SELECT-OPTIONS:
-  so_car FOR gs_spfli-carrid,
-  so_con FOR gs_spfli-connid.
-SELECTION-SCREEN END OF SCREEN 101.
+  SELECTION-SCREEN TAB (<탭_텍스트_최대길이>) <탭텍스트변수>
+    USER-COMMAND <OKCODE> DEFAULT SCREEN <서브스크린번호>.
 
-SELECTION-SCREEN BEGIN OF SCREEN 102 AS SUBSCREEN.
-PARAMETERS p_city TYPE spfli-cityfrom.
-SELECTION-SCREEN END OF SCREEN 102.
-
-SELECTION-SCREEN BEGIN OF SCREEN 103 AS SUBSCREEN.
-PARAMETERS p_country TYPE spfli-countryfr.
-SELECTION-SCREEN END OF SCREEN 103.
+SELECTION-SCREEN END OF BLOCK <탭블록명>.
 ```
-- Selection Screen에 탭(Tabstrip) 을 만들어 여러 선택 화면을 탭으로 전환해서 표시
-- 각 탭은 서브스크린(Screen 번호) 과 연결됨
+- 탭스트립 초기 활성 탭 / 서브스크린 지정
+```abap
+<탭블록명>-activetab = '<USER-COMMAND>'.
+<탭블록명>-dynnr     = '<서브스크린번호>'.
+```
 </br>
 </br>
 </br>
