Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -185,7 +185,7 @@ AT SELECTION-SCREEN ON pa_add.
 </br>
 </br>
 
-### 5) Selection Screen을 Subscreen으로 정의
+### 5) Selection Screen 서브스크린 & 탭스트립
 - 서브스크린 코드 형식
 ```abap
 SELECTION-SCREEN BEGIN OF SCREEN <서브스크린번호> AS SUBSCREEN.
@@ -205,6 +205,51 @@ SELECTION-SCREEN END OF BLOCK <탭블록명>.
 ```abap
 <탭블록명>-activetab = '<USER-COMMAND>'.
 <탭블록명>-dynnr     = '<서브스크린번호>'.
+```
+```abap
+"----------------------------------------
+" 서브스크린 정의
+"----------------------------------------
+SELECTION-SCREEN BEGIN OF SCREEN 101 AS SUBSCREEN.
+  SELECT-OPTIONS so_carr FOR spfli-carrid.
+SELECTION-SCREEN END OF SCREEN 101.
+
+SELECTION-SCREEN BEGIN OF SCREEN 102 AS SUBSCREEN.
+  PARAMETERS pa_date TYPE sy-datum.
+SELECTION-SCREEN END OF SCREEN 102.
+
+SELECTION-SCREEN BEGIN OF SCREEN 103 AS SUBSCREEN.
+  PARAMETERS pa_flag AS CHECKBOX.
+SELECTION-SCREEN END OF SCREEN 103.
+
+
+"----------------------------------------
+" 탭스트립 정의
+"----------------------------------------
+SELECTION-SCREEN BEGIN OF TABBED BLOCK tab_strip FOR 5 LINES.
+
+  SELECTION-SCREEN TAB (20) tab1
+    USER-COMMAND COMM1 DEFAULT SCREEN 101.
+
+  SELECTION-SCREEN TAB (20) tab2
+    USER-COMMAND COMM2 DEFAULT SCREEN 102.
+
+  SELECTION-SCREEN TAB (20) tab3
+    USER-COMMAND COMM3 DEFAULT SCREEN 103.
+
+SELECTION-SCREEN END OF BLOCK tab_strip.
+
+
+"----------------------------------------
+" 초기 활성 탭 / 서브스크린 지정
+"----------------------------------------
+INITIALIZATION.
+  tab1 = 'Carrier'.
+  tab2 = 'Date'.
+  tab3 = 'Option'.
+
+  tab_strip-activetab = 'COMM1'.
+  tab_strip-dynnr     = '0101'.
 ```
 </br>
 </br>
